--- a/CadeMeuMedico/CadeMeuMedico/Views/Layout.cshtml
+++ b/CadeMeuMedico/CadeMeuMedico/Views/Layout.cshtml
@@ -17,12 +17,14 @@
                 <a class="navbar-brand" href="#">
                     Cade meu medico?
                 </a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#">Home</a>
-                    </li>
+            </div>            
+            
+            <div>                
+                <ul class="nav navbar-nav">                    
+                    <li class="active"><a href="#">Home</a></li>
+                    <li id="menuMedicos">@Html.ActionLink("Médicos", "Index", "Medicos")</li>
+                    <li id="menuCidades">@Html.ActionLink("Cidades", "Index", "Cidades")</li>
+                    <li id="menuCidades">@Html.ActionLink("Especialidades", "Index", "Especialidades")</li>
                 </ul>
             </div>
         </div>
